@@ -23,6 +23,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16658: add missing return to HTTPConnection.send()
+  Patch by Jeff Knupp.
+
 - Issue #14971: unittest test discovery no longer gets confused when a function
   has a different __name__ than its name in the TestCase class dictionary.
 
